force-app/main/default/objects/Proyecto__c/fields/Costo_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Costo_Adicional__c</fullName>
    <label>Costo Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>