force-app/main/default/objects/Proyecto__c/fields/Costo_Aerolinea__c.field-meta.xml
<CustomField>
    <fullName>Costo_Aerolinea__c</fullName>
    <label>Costo Aerolínea</label>
    <summarizedField>Costo_Embarque__c.Costo_Aerolinea__c</summarizedField>
    <summaryForeignKey>Costo_Embarque__c.Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>