force-app/main/default/objects/Proyecto__c/fields/Costo_Agente__c.field-meta.xml
<CustomField>
    <fullName>Costo_Agente__c</fullName>
    <label>Costo Agente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>