force-app/main/default/objects/Proyecto__c/fields/Fin_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Fin_del_Proyecto__c</fullName>
    <label>Fin del Proyecto</label>
    <type>Date</type>
</CustomField>