force-app/main/default/objects/Proyecto__c/fields/Ingreso_Total_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_Total_del_Proyecto__c</fullName>
    <label>Ingreso Total del Proyecto</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>