force-app/main/default/objects/Proyecto__c/fields/Inicio_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Inicio_del_Proyecto__c</fullName>
    <label>Inicio del Proyecto</label>
    <type>Date</type>
</CustomField>